<resources>

    <!-- Common Application begin -->
    <string name="app_name">NASA Explorer</string>
    <string name="empty_query">Empty query!</string>
    <string name="reload">Reload</string>
    <!-- Common Application end -->

    <!-- BottomNavigation begin -->
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_asteroids">Asteroids</string>
    <string name="bottom_navigation_settings">Settings</string>
    <string name="bottom_navigation_notes">Notes</string>
    <!-- BottomNavigation end -->

    <!-- MainFragment begin -->
    <string name="main_fragment_header">Picture of the day</string>
    <!-- MainFragment end -->

    <!-- BottomSheet begin -->
    <string name="bottom_sheet_wikipedia_text_input_helper_text">
        Type words for searching in Wikipedia</string>
    <string name="bottom_sheet_search_button_text">Search</string>
    <!-- BottomSheet end -->

    <!-- SettingsFragment begin -->
    <string name="settings_fragment_themes_header">Select theme</string>
    <string name="settings_fragment_system_default_theme">System default</string>
    <string name="settings_fragment_moon_theme">Moon</string>
    <string name="settings_fragment_mars_theme">Mars</string>
    <!-- SettingsFragment end -->

    <!-- AsteroidsNeoWSFragment begin -->
    <string name="asteroidsneows_fragment_header">Nearest asteroids</string>
    <!-- AsteroidsNeoWSFragment end -->

    <!-- AsteroidsNeoWSFragment RecyclerItem begin -->
    <string name="fragment_asteroidsneows_recycler_item_id">ID: %1$s</string>
    <string name="fragment_asteroidsneows_recycler_item_name">Name: %1$s</string>
    <string name="fragment_asteroidsneows_recycler_item_magnitude">
        Absolute magnitude (H): %1$s</string>
    <string name="fragment_asteroidsneows_recycler_item_diameter_min">
        Estimated min diameter (m): %1$s</string>
    <string name="fragment_asteroidsneows_recycler_item_diameter_max">
        Estimated max diameter (m): %1$s</string>
    <string name="fragment_asteroidsneows_recycler_item_hazardous">
        Potentially hazardous: %1$s</string>
    <string name="fragment_asteroidsneows_recycler_item_relative_velocity">
        Relative velocity (km/s): %1$s</string>
    <string name="fragment_asteroidsneows_recycler_item_approach_date">
        Close approach date: %1$s</string>
    <!-- AsteroidsNeoWSFragment RecyclerItem end -->

    <!-- NotesFragment begin -->
    <string name="notes_fragment_note_saved">Note Saved!</string>
    <string name="notes_fragment_note_deleted">Note deleted!</string>
    <!-- NotesFragment end -->

    <!-- NotesFragment Menu begin -->
    <string name="notes_fragment_menu_create_note">Create note</string>
    <!-- NotesFragment Menu end -->

</resources>