<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.stellarworker.nasaexplorer.ui.MainFragment"
        android:label="@string/bottom_navigation_home"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_asteroids"
        android:name="com.stellarworker.nasaexplorer.ui.asteroids_neows.AsteroidsNeoWSFragment"
        android:label="@string/bottom_navigation_asteroids"
        tools:layout="@layout/fragment_asteroidsneows" />

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.stellarworker.nasaexplorer.ui.notes.NotesFragment"
        android:label="@string/bottom_navigation_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.stellarworker.nasaexplorer.ui.settings.SettingsFragment"
        android:label="@string/bottom_navigation_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>